# bevy-webworker

./: Cargo.toml  README.md  index.html  reset.css  run.py
.devcontainer/: Dockerfile  devcontainer.json
main/: Cargo.toml
main/src/: events.rs  main.rs
shared/src/: lib.rs
worker/: Cargo.toml
worker/src/: camera.rs  drag.rs  main.rs  offscreen.rs  world.rs
