[workspace]
resolver = "2"

members = [
    "main",
    "worker",
    "shared",
]

[workspace.dependencies]
shared = { path = "shared" }
console_error_panic_hook = "0.1.7"
futures = "0.3.26"
futures-signals = "0.3.31"
glam = { version = "0.25.0", features = ["serde"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-events = "0.1.2"
gloo-net = "0.5.0"
itertools = "0.12.1"
js-sys = "0.3.72"
serde = "1.0.210"
serde_json = { version = "1.0" }
tracing = { version = "0.1.37", default-features = false }
tracing-web = "0.1.2"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter", "std"] }
once_cell = "1.16.0"
uuid = "1.2.2"
wasm-bindgen = "=0.2.95" # pin to the same version of the CLI
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
web-rpc = "0.0.3"






